# data-team-autopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  phase-0-1a-implementation-plan.md  pyproject.toml
.github/workflows/: ci.yml  security-audit.yml
deploy/: .env.live.example  .env.staging  .env.staging.example  ROLLBACK.md
docs/: tester-guide.md
scripts/: ci_verify.sh  dependency_integrity_check.py  deploy_release.sh  e2e_smoke.py  live_readiness_check.sh  load_test.py  load_test_inprocess.py  predeploy_checklist.sh  rollback_release.sh  run_migrations.py  security_scan.sh  security_scan_venv.sh
src/data_autopilot/: main.py
tests/integration/: test_agent_approval_contract.py  test_alert_auto_generation.py  test_alert_notifications.py  test_alert_policy_snooze.py  test_alerts.py  test_api.py  test_artifact_history.py  test_artifact_lineage_diff.py  test_audit_events.py  test_audit_payloads.py  test_channel_integrations.py  test_chat_api.py  test_connector_disconnect.py  test_dashboard_versioning.py  test_degradation_and_feedback.py  test_edge_conditions.py  test_feedback_polish.py  test_integration_bindings_api.py  test_llm_cost_api.py  test_llm_eval.py  test_llm_fallback.py  test_memo_eval_endpoint.py  test_pii_review.py  test_query_approval.py  test_rbac.py  test_ready.py  test_tenant_isolation.py  test_tenant_purge.py  test_tester_app.py  test_tester_onboarding.py  test_workflow_ops.py  test_workflow_resilience.py  test_workflows.py
tests/unit/: test_agent_service.py  test_cost_limiter.py  test_edge_cases.py  test_llm_cost.py  test_llm_provider.py  test_memo_service.py  test_memo_validation.py  test_migration_runner.py  test_mode1_e2e.py  test_mode1_parser.py  test_mode1_providers.py  test_mode1_router.py  test_mode2_e2e.py  test_mode2_generators.py  test_mode2_memory.py  (+26 more)
(+117 files in other folders)
