[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-team-autopilot"
version = "0.1.0"
description = "Data Team Autopilot MVP"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.40",
  "alembic>=1.16.0",
  "redis>=6.4.0",
  "sqlglot>=26.30.0",
  "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0"
]
live = [
  "google-cloud-bigquery>=3.33.0",
  "google-auth>=2.40.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
