[build-system]
requires = ["setuptools==68.2.2", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-team-autopilot"
version = "0.1.0"
description = "Data Team Autopilot MVP"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.128.0",
  "uvicorn==0.39.0",
  "pydantic==2.9.1",
  "pydantic-settings==2.0.3",
  "sqlalchemy==2.0.34",
  "alembic==1.13.2",
  "redis==5.0.8",
  "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-asyncio==0.24.0",
  "ruff==0.12.0"
]
live = [
  "google-cloud-bigquery==3.33.0",
  "google-auth==2.40.0",
  "psycopg[binary]==3.2.3"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
